--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Splash Screen -->
+  <div id="splash" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:var(--primary-color);display:flex;align-items:center;justify-content:center;z-index:9999;transition:opacity 0.5s;">
+    <h1 style="color:var(--secondary-color);font-size:3rem;animation:splashFade 2s ease-in-out;">TaskDay</h1>
+  </div>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><i class="fa-solid fa-calendar-check"></i> TaskDay</a>
@@ -37,10 +42,24 @@
       </div>
     </div>
   </nav>
-  <main class="container py-5">
-    <h1 class="mb-4" style="color: var(--primary-color);">Bem-vindo ao TaskDay</h1>
-    <p>Gerencie suas tarefas e compromissos de forma simples e eficiente.</p>
-    <a href="#" class="btn btn-primary"><i class="fa-solid fa-plus"></i> Nova Tarefa</a>
+  <!-- Tela de Login -->
+  <main class="container d-flex flex-column justify-content-center align-items-center" style="min-height:80vh;">
+    <div class="card shadow p-4 w-100" style="max-width:350px;">
+      <h2 class="mb-4 text-center" style="color:var(--primary-color);">Entrar</h2>
+      <form>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
+        </div>
+        <div class="mb-3">
+          <label for="senha" class="form-label">Senha</label>
+          <input type="password" class="form-control" id="senha" placeholder="Digite sua senha" required>
+        </div>
+        <button type="submit" class="btn btn-primary w-100 mb-2">Entrar</button>
+        <a href="#" class="d-block text-center mb-2" style="color:var(--secondary-color);">Cadastrar</a>
+        <button type="button" class="btn btn-outline-dark w-100"><i class="fa-brands fa-google"></i> Entrar com Google</button>
+      </form>
+    </div>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -48,5 +67,26 @@
   <script src="js/main.js"></script>
   <script src="js/auth.js"></script>
   <script src="js/calendar.js"></script>
+  <script>
+    // Splash screen animation
+    window.addEventListener('DOMContentLoaded', function() {
+      setTimeout(function() {
+        var splash = document.getElementById('splash');
+        splash.style.opacity = '0';
+        setTimeout(function(){ splash.style.display = 'none'; }, 500);
+      }, 2000);
+    });
+  </script>
+  <style>
+    @keyframes splashFade {
+      0% { opacity: 0; transform: scale(0.8); }
+      50% { opacity: 1; transform: scale(1.05); }
+      100% { opacity: 1; transform: scale(1); }
+    }
+    @media (max-width: 576px) {
+      .card { padding: 1.5rem 0.5rem; }
+      .card h2 { font-size: 1.5rem; }
+    }
+  </style>
 </body>
 </html>
