--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Splash Screen -->
   <div id="splash" style="position:fixed;top:0;left:0;width:100vw;height:100vh;background:var(--primary-color);display:flex;align-items:center;justify-content:center;z-index:9999;transition:opacity 0.5s;">
-    <h1 style="color:var(--secondary-color);font-size:5rem;animation:splashFade 2s ease-in-out;">TaskDay</h1>
+    <h1 style="color:var(--secondary-color);font-size:4rem;animation:splashFade 2s ease-in-out;">TaskDays</h1>
   </div>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
@@ -58,6 +58,29 @@
   </nav>
   <!-- Tela de Login -->
   <main class="container d-flex flex-column justify-content-center align-items-center" style="min-height:80vh;">
+    <!-- Tela de Perfil -->
+    <div id="perfil-card" class="card shadow p-4 w-100" style="max-width:500px; display:none;">
+      <h3 class="mb-3 text-center" style="color:var(--primary-color);">Perfil do Usuário</h3>
+      <div class="mb-3 text-center">
+        <span class="fw-bold">Nome:</span> <span id="perfil-nome"></span><br>
+        <span class="fw-bold">Email:</span> <span id="perfil-email"></span><br>
+        <span class="fw-bold">Nível:</span> <span id="perfil-nivel"></span><br>
+        <span class="fw-bold">Pontos:</span> <span id="perfil-pontos"></span><br>
+      </div>
+      <div class="mb-3">
+        <span class="fw-bold">Conquistas desbloqueadas:</span>
+        <ul id="perfil-conquistas" class="list-group mb-2"></ul>
+      </div>
+      <div class="mb-3">
+        <span class="fw-bold">Estatísticas do histórico:</span>
+        <ul class="list-group">
+          <li class="list-group-item">Tarefas concluídas na semana: <span id="perfil-concluidas-semana"></span></li>
+          <li class="list-group-item">Tarefas pendentes na semana: <span id="perfil-pendentes-semana"></span></li>
+          <li class="list-group-item">Tarefas concluídas no mês: <span id="perfil-concluidas-mes"></span></li>
+          <li class="list-group-item">Tarefas pendentes no mês: <span id="perfil-pendentes-mes"></span></li>
+        </ul>
+      </div>
+    </div>
     <!-- Login e Cadastro -->
     <div id="login-card" class="card shadow p-4 w-100" style="max-width:350px;">
       <h2 class="mb-4 text-center" style="color:var(--primary-color);">Entrar</h2>
@@ -440,8 +463,86 @@
           if(item.textContent === 'Atividades') {
             mostrarTelaAtividades();
           }
+          if(item.textContent === 'Perfil') {
+            mostrarTelaPerfil();
+          }
         };
       });
+
+      // Função para mostrar tela de perfil
+      function mostrarTelaPerfil() {
+        loginCard.style.display = 'none';
+        cadastroCard.style.display = 'none';
+        atividadesCard.style.display = 'none';
+        var perfilCard = document.getElementById('perfil-card');
+        if(perfilCard) perfilCard.style.display = 'block';
+        renderPerfil();
+      }
+
+      // Função para renderizar dados do perfil
+      function renderPerfil() {
+        var perfilNome = document.getElementById('perfil-nome');
+        var perfilEmail = document.getElementById('perfil-email');
+        var perfilNivel = document.getElementById('perfil-nivel');
+        var perfilPontos = document.getElementById('perfil-pontos');
+        var perfilConquistas = document.getElementById('perfil-conquistas');
+        var perfilConcluidasSemana = document.getElementById('perfil-concluidas-semana');
+        var perfilPendentesSemana = document.getElementById('perfil-pendentes-semana');
+        var perfilConcluidasMes = document.getElementById('perfil-concluidas-mes');
+        var perfilPendentesMes = document.getElementById('perfil-pendentes-mes');
+        if(!usuarioLogado) return;
+        // Dados básicos
+        perfilNome.textContent = usuarioLogado.nome;
+        perfilEmail.textContent = usuarioLogado.email;
+        var pontos = pontosConsecutivos;
+        perfilPontos.textContent = pontos;
+        var nivel = Math.floor(pontos / 7) + 1;
+        perfilNivel.textContent = nivel;
+        // Conquistas
+        var conquistas = [];
+        if(pontos >= 7) conquistas.push('1 semana completa');
+        if(pontos >= 30) conquistas.push('1 mês completo');
+        if(pontos >= 100) conquistas.push('100 dias consecutivos');
+        perfilConquistas.innerHTML = conquistas.length ? conquistas.map(c => `<li class='list-group-item'>${c}</li>`).join('') : '<li class="list-group-item">Nenhuma conquista ainda</li>';
+        // Estatísticas do histórico
+        var hoje = new Date();
+        var semanaAtual = getSemanaAno(hoje);
+        var mesAtual = hoje.getMonth();
+        var concluidasSemana = 0, pendentesSemana = 0, concluidasMes = 0, pendentesMes = 0;
+        Object.keys(historico).forEach(function(dataStr){
+          var data = parseDataBR(dataStr);
+          if(getSemanaAno(data) === semanaAtual) {
+            concluidasSemana += historico[dataStr].concluidas ? historico[dataStr].concluidas.length : 0;
+            // Pendentes: total do dia - concluidas
+            var totalDia = getAtividades().filter(a => a.dias.includes(data.getDay())).length;
+            pendentesSemana += Math.max(0, totalDia - (historico[dataStr].concluidas ? historico[dataStr].concluidas.length : 0));
+          }
+          if(data.getMonth() === mesAtual) {
+            concluidasMes += historico[dataStr].concluidas ? historico[dataStr].concluidas.length : 0;
+            var totalDia = getAtividades().filter(a => a.dias.includes(data.getDay())).length;
+            pendentesMes += Math.max(0, totalDia - (historico[dataStr].concluidas ? historico[dataStr].concluidas.length : 0));
+          }
+        });
+        perfilConcluidasSemana.textContent = concluidasSemana;
+        perfilPendentesSemana.textContent = pendentesSemana;
+        perfilConcluidasMes.textContent = concluidasMes;
+        perfilPendentesMes.textContent = pendentesMes;
+      }
+
+      // Helpers para datas
+      function getSemanaAno(date) {
+        var d = new Date(Date.UTC(date.getFullYear(), date.getMonth(), date.getDate()));
+        var dayNum = d.getUTCDay() || 7;
+        d.setUTCDate(d.getUTCDate() + 4 - dayNum);
+        var yearStart = new Date(Date.UTC(d.getUTCFullYear(),0,1));
+        return Math.ceil((((d - yearStart) / 86400000) + 1)/7);
+      }
+      function parseDataBR(str) {
+        // Ex: quarta-feira, 14/08/2025
+        var parts = str.split(', ');
+        var dateParts = parts[1].split('/');
+        return new Date(dateParts[2], dateParts[1]-1, dateParts[0]);
+      }
 
       // Troca automática de dia às 00:00
       function verificaTrocaDia() {
