--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body class="bg-dark text-light">
   <div id="splash" class="d-flex flex-column justify-content-center align-items-center vh-100">
@@ -19,5 +20,14 @@
   <script src="assets/js/app.js"></script>
   <script src="assets/js/auth.js"></script>
   <script src="assets/js/trophy.js"></script>
+  <script>
+  function onGoogleSignIn(response) {
+    // O token está em response.credential
+    // Você pode decodificar o JWT ou enviar para seu backend
+    console.log('Google JWT:', response.credential);
+    // Exemplo: autenticar usuário localmente
+    // window.location.href = 'main.html'; // redireciona após login
+  }
+  </script>
 </body>
 </html>
