refactor: remover splash, login/cadastro direto

--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body class="bg-dark text-light">
-  <div id="splash" class="d-flex flex-column justify-content-center align-items-center vh-100">
-    <h1 class="display-3 fw-bold text-success animate__animated animate__fadeInDown">TaskDay</h1>
-    <h3 class="fw-bold animate__animated animate__fadeInDown text-nowrap responsive-h3">Organize suas tarefas de forma simples e eficiente</h3>
-  </div>
-  <div id="auth" class="d-none">
+  <div id="auth">
     <!-- Login/Cadastro será inserido via JS -->
   </div>
   <script src="assets/js/app.js"></script>
