--- a/achievements.html
+++ b/achievements.html
@@ -6,7 +6,7 @@
   <title>TaskDay - Conquistas</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark text-light">
   <nav id="navbar"></nav>
@@ -21,9 +21,9 @@
       <a href="mailto:pedrohenso@outlook.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
     </p>
   </footer>
-  <script src="assets/js/app.js"></script>
-  <script src="assets/js/achievements.js"></script>
-  <script src="assets/js/trophy.js"></script>
+  <script src="app.js"></script>
+  <script src="achievements.js"></script>
+  <script src="trophy.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
