--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TaskDay</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body class="bg-dark text-light">
   <div id="auth">
     <!-- Login/Cadastro será inserido via JS -->
   </div>
-  <script src="assets/js/app.js"></script>
-  <script src="assets/js/auth.js"></script>
-  <script src="assets/js/trophy.js"></script>
+  <script src="app.js"></script>
+  <script src="auth.js"></script>
+  <script src="trophy.js"></script>
   <script>
   function onGoogleSignIn(response) {
     // O token está em response.credential
