--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
       <a href="mailto:pedrohenso@outlook.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
     </p>
   </footer>
-  <script src="app.js"></script>
-  <script src="routine.js"></script>
-  <script src="trophy.js"></script>
+  <script src="/app.js"></script>
+  <script src="/routine.js"></script>
+  <script src="/trophy.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
